# data-script

./: CMakeLists.txt  ProjectHome.md
cmake/: config_flags.cmake  global.cmake
reference/: DataScriptEmitter.g  DataScriptLexer.g  DataScriptWalker.g  ExpressionEvaluator.g
src/datascript/: CMakeLists.txt  ast_builder.cpp  ast_builder.hpp  compiler.h  datascript_api.h  syntax_tree.cpp  syntax_tree.hpp
src/datascript/parser/: ast.h  dsparser.y  parser.cpp  parser.hpp  parser_procs.h  parserfwd.h
src/datascript/scanner/: io.cpp  lexeme.cpp  lexeme.hpp  lexer.cpp  lexer.hpp  scanner.cpp  scanner.hpp  scanner.re2c  scanner_iface.h  tokens.cpp  tokens.h  tokens_storage.cpp  tokens_storage.h
src/datascript/scanner/libscanner/: libscanner.c  libscanner.h  reader.c
src/datascript/xml/: xml.cpp
src/parser/: CMakeLists.txt  io.cpp  io.hpp  main.cpp  scanner.re2c  scanner_iface.c  scanner_iface.h  tokens.h
src/tools/lemon/: lemon.c  lempar.c
src/tools/re2c/: CMakeLists.txt  code.cc  config.h.in  parser.cc  stream_lc.h
src/unittest/: CMakeLists.txt  scanner_test.cpp
trunk/: CMakeLists.txt
trunk/cmake/: build.cmake  config_flags.cmake
trunk/reference/: DataScriptParser.g  TypeEvaluator.g
trunk/src/datascript/: CMakeLists.txt  ast_builder.cpp  ast_builder.hpp  compiler.h  datascript_api.h  syntax_tree.hpp
trunk/src/datascript/parser/: ast.cpp  dsparser.y  parser.cpp  parser.h  parser.hpp  parser_procs.cpp
trunk/src/datascript/scanner/: io.cpp  io.hpp  lexeme.cpp  lexeme.hpp  lexer.cpp  lexer.hpp  scanner.cpp  scanner.hpp  scanner.re2c  scanner_iface.c  scanner_iface.h  tokens.cpp  tokens.h  tokens_storage.cpp  tokens_storage.h
trunk/src/datascript/scanner/libscanner/: libscanner.c  libscanner.h  reader.c  reader.h
trunk/src/datascript/xml/: xml.hpp
trunk/src/parser/: CMakeLists.txt  main.cpp  scanner.cpp  scanner.hpp  token.cpp  tokens.cpp
trunk/src/tools/lemon/: CMakeLists.txt
trunk/src/tools/re2c/: CMakeLists.txt  parser.cc  parser.y  re2c.1
trunk/src/unittest/: CMakeLists.txt  catch.hpp  scanner_test.cpp
